Add methods to validate case management location